# vulkan_test

./: .clang-format  .clang-tidy  .gitmodules  .ignore  CMakeLists.txt  main.cpp
inc/: log.hpp  vulkan_functions.hpp
inc/vxl/: dyna_loader.hpp
inc/vxl/vk/: error.hpp  formatters.hpp  functions.hpp  layer_ext_store.hpp  loggers.hpp  stuff.hpp  utils.hpp  vector_helpers.hpp
inc/vxl/vk/detail/: vertex_input_describer.hpp  vxl_vk_functions.json  vxl_vk_functions_generator.mjs
inc/vxl/vk/detail/vk_functions/: functions.json  generator.ts  package-lock.json  package.json  tsconfig.json
inc/vxl/vk/things/: debug_messenger.hpp  device.hpp  frame.hpp  instance.hpp  pipeline.hpp  surface.hpp  swapchain.hpp  utils.hpp
run/: bun_zipper.ply
shaders/: triangle.frag  triangle.vert
src/: log.cpp  vulkan_functions.cpp
src/vxl/: dyna_loader.cpp
src/vxl/vk/: functions.cpp  loggers.cpp  stuff.cpp
src/vxl/vk/things/: debug_messenger.cpp  device.cpp  frame.cpp  instance.cpp  pipeline.cpp  surface.cpp  swapchain.cpp
